[package]
name = "autha"
version = "0.3.1"
description = "fast and safe authorization delegation and account management API"
homepage = "https://account.gravitalia.com"
readme = "README.md"
edition = "2024"
license = "MPL"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true # false if flamegraph/DHAT.
debug = false # true if flamegraph/DHAT.

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio =  { version = "1.48", features = ["rt-multi-thread", "net", "tracing", "signal"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.6", features = [
"cors", "trace", "tracing", "request-id", "sensitive-headers", "tokio", "timeout",
] }
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
url = "2.5"
validator = { version = "0.20", features = ["derive"] }
hex = "0.4"
regex-lite = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ldap3 = "0.12.1"
# Error
thiserror = "2.0"
# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version="0.31.0",  features = ["grpc-tonic", "metrics"] }
opentelemetry-appender-tracing = "0.31.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["tracing"] }
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
# Cryptography
zeroize = "1.8"
argon2 = "0.5.3"
rsa = "0.9.8"
p256 = "0.13.2"
base64ct = "1.8"
aes = "0.8.4"
aes-gcm = { version = "0.10.3", features = ["std"] }
cbc = { version = "0.1.2", features = ["std"] }
rand = "0.8"
## TOTP related.
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
dhat = { version = "0", optional = true }

[dev-dependencies]
http-body-util = "0.1"

[features]
dhat-heap = ["dhat"]
