[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0-dev"
edition = "2024"
license = "MPL-2.0"
authors = ["Gravitalia Team"]
repository = "https://github.com/Gravitalia/Autha"

[workspace.dependencies]
serde = "1"
chrono = "0.4"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true # false if flamegraph/DHAT.
debug = false # true if flamegraph/DHAT.
