"""autha - fast account system management"""

module(
    name = "autha",
    version = "3.0",
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Protobuf support.
bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
bazel_dep(
    name = "protobuf",
    version = "23.1",
    repo_name = "com_google_protobuf",
)

proto = use_extension("@rules_proto//proto:repositories.bzl", "proto")
proto.dependencies()
proto.toolchain()

# Rust support.
bazel_dep(name = "rules_rust", version = "0.40.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//autha:Cargo.toml",
        "//crypto:Cargo.toml",
        "//db:Cargo.toml",
        "//image_processor:Cargo.toml",
    ],
)
use_repo(crate, "crate_index")

# OCI support.
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_oci", version = "1.7.4")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.toolchains(
    name = "oci",
    crane_version = "v0.18.0",
)

oci.pull(
    name = "distroless_cc",
    digest = "sha256:a9056d2232d16e3772bec3ef36b93a5ea9ef6ad4b4ed407631e534b85832cf40",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        #"linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_cc")
