load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "autha-limits",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_features = [
        "warp",
    ],
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    rustc_flags = [
        "-Copt-level=3",
        "-Cstrip=symbols",
        "-Clto=fat",
        "-Cembed-bitcode=yes",
        "-Ccodegen-units=1",
        "-Cdebuginfo=none",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "autha-limits_test",
    crate = ":autha-limits",
    crate_features = [
        "warp",
    ],
    deps = all_crate_deps(
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
    size = "large",
    timeout = "short",
)
