load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "crypto",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    rustc_flags = ["-Copt-level=3", "-Cstrip=symbols", "-Clto", "-Ccodegen-units=1", "-Cdebuginfo=none"],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "crypto_test",
    crate = ":crypto",
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    size = "large",
    timeout = "short",
)
