[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8", optional = true }
fpe = { version = "0.6", optional = true }
hex = "0"
ring = "0.17"
rust-argon2 = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
regex-lite = "0.1"

[features]
argon2 = ["rust-argon2"]
format_preserving = ["aes", "fpe"]

[[bench]]
name = "hash_benchmark"
harness = false

[[bench]]
name = "encryption_benchmark"
harness = false

[[bench]]
name = "random_benchmark"
harness = false
