load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "db",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_features = [
        "logging",
        "rabbitmq",
        "apache_kafka",
        "memcached",
        "cassandra",
    ],
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
)
