[package]
name = "image_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
fast_image_resize = "3.0"
tempfile = "3.9.0"

cloudinary = "0.4.0"

anyhow = "1"
log = "0.4"

crypto = { path = "../crypto" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "image_benchmark"
harness = false
