[package]
name = "image_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tempfile = "3.10.0"

cloudinary = "0.4.0"

crypto = { path = "../crypto" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "image_benchmark"
harness = false
