[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "json"] }

argon2 = { version = "0.5", features = ["std"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
base32 = "0.5"
hex = "0.4"
zeroize = { workspace = true }
constant_time_eq = "0.4"

jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
passwords = "3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

validator = { version = "0.20", features = ["derive"] }
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-aws-lc-rs"] }
lapin = { version = "3", features = ["unstable"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
url = "2"
