[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
adapters = { path = "../adapters" }

tokio = { version = "1.50", features = ["rt-multi-thread", "net", "signal", "macros"] }
axum = { version = "0.8" }
hyper = "1.8"
hyper-util = "0.1"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["timeout"] }

zeroize = "1.8"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"] }
opentelemetry-appender-tracing = "0.31"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["tracing"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

[features]
dhat-heap = ["dep:dhat"]

[dependencies.dhat]
version = "0"
optional = true
