[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
async-trait = "0.1"
spki = { version = "0.7.3", features = ["pem"] }
der = "0.7"
sha2 = "0.10"
hex = "0.4"